# thesis_abnormal_fir

./: README.md  lgbm_touchdown_classifier.ipynb  main.py  metar_data.ipynb  pyproject.toml  taf_data.ipynb  weather.ipynb
gcp_python_connection/: Get data from BigQuery.ipynb  quick_reference.md  setup_quide.md
gcp_python_connection/queries/: test.sql
notebooks/01_exploration/: exploration.ipynb
sql/: extract_flight_details.sql  extract_metar_data.sql  extract_taf_data.sql  klm_raw_2023_2026.sql
src/data/extract/: extract_sql_data.py  extract_weather_data.py
src/data/preprocess/: select_relevant_columns.py
src/pipelines/: run_extraction.py  run_weather_extraction.py
weather/: evaluate_data.py  extract_features.py
weather/iem_metar/: cache.py  extract.py  fetch.py  match.py
