[project]
name = "code-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "db-dtypes>=1.4.4",
    "google-cloud-bigquery>=3.41.0",
    "ipykernel>=7.2.0",
    "itables>=2.7.3",
    "jupyter-summarytools>=0.2.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "metafora>=1.1.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
    "polars>=1.40.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
